--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 BOT_TOKEN=8328634099:AAFT5EpBvKHdDUl9lfFAS_KyEV1JYZKi0Pk
 DATABASE_URL=sqlite+aiosqlite:///./data/bot.db
 LOG_LEVEL=INFO
-HEADLESS=true
+HEADLESS=false
